[gd_scene load_steps=2 format=3 uid="uid://c1vm7q2mdjc7j"]

[ext_resource type="Script" path="res://Scripts/UI/ProductionPanel.gd" id="1_production_panel"]

[node name="ProductionPanel" type="Panel"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_production_panel")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.25, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gestión de Producción Urbana"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CityInfoContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CityNameLabel" type="Label" parent="VBoxContainer/CityInfoContainer"]
layout_mode = 2
text = "Ciudad: Buenos Aires"

[node name="CityTypeLabel" type="Label" parent="VBoxContainer/CityInfoContainer"]
layout_mode = 2
text = "Tipo: Capital"

[node name="CurrentProductionLabel" type="Label" parent="VBoxContainer/CityInfoContainer"]
layout_mode = 2
text = "Producción Actual: Dinero (+50/turno)"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProductionLabel" type="Label" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
text = "Seleccionar Recurso a Producir:"
horizontal_alignment = 1

[node name="ResourcesContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ApplyButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Aplicar Cambios"
disabled = true

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Cancelar"